<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_item_padding">
    <CheckBox
        android:id="@+id/checkFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_padding"
        android:textSize="@dimen/list_item_text_size"
        android:textColor="@android:color/black"
        android:drawablePadding="@dimen/list_item_padding"
        android:text="@string/book_title"
        app:layout_constraintStart_toEndOf="@+id/checkFavorite"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
